--- a/package.json
+++ b/package.json
@@ -22,13 +22,18 @@
   },
   "homepage": "https://github.com/cynhw/fem-react#readme",
   "devDependencies": {
+    "babel-eslint": "^10.0.1",
     "eslint": "^5.16.0",
     "eslint-config-prettier": "^4.3.0",
+    "eslint-plugin-import": "^2.17.3",
+    "eslint-plugin-jsx-a11y": "^6.2.1",
     "eslint-plugin-prettier": "^3.1.0",
-    "parcel-bundler": "^1.12.3",
+    "eslint-plugin-react": "^7.13.0",
+    "parcel-bundler": "^1.11.0",
     "prettier": "^1.17.1"
   },
   "dependencies": {
+    "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
   }
