--- a/package.json
+++ b/package.json
@@ -33,6 +33,7 @@
     "prettier": "^1.17.1"
   },
   "dependencies": {
+    "@reach/router": "^1.2.1",
     "axios": "^0.19.0",
     "react": "^16.8.6",
     "react-dom": "^16.8.6"
